--- a/src/i18n/en-labels.json
+++ b/src/i18n/en-labels.json
@@ -19,21 +19,21 @@
     },
     "boxSection":{
       "box1":{
-        "title":"Main feature 1",
-        "description":"Put here some information about your feature"
+        "title":"Store your blood type easily",
+        "description":"You don't need to remember your blood type. Mediheart will do it for you once and for all."
       },
       "box2":{
-        "title":"Main feature 2",
-        "description":"Put here some information about your feature"
+        "title":"Keep your medical records",
+        "description":"Add your new info in a easy way. Your medical records are now up to date."
       },
       "box3":{
-        "title":"Main feature 3",
-        "description":"Put here some information about your feature"
+        "title":"Share info with your doctor securely",
+        "description":"When it's time for your appointment, share your medical records with your doctor."
       }
     },
     "intermediateSection":{
-      "title":"Keep track of your information",
-      "subtitle":"Try this smart way to have your health information a click away. "
+      "title":"Keep track of your health information",
+      "subtitle":"An online Personal Health Records service that you can use to keep track of information from your doctor visits, tests and procedures. "
     }
   },
 
