completed firstLogin view

--- a/src/i18n/en-labels.json
+++ b/src/i18n/en-labels.json
@@ -107,7 +107,7 @@
     }
   },
 
-  "NoPatient":{
+  "firstLogin":{
     "Welcome" : "Welcome to MediHeart !",
     "WelcomeSubTitle": "Tell us something more about you ",
     "title": "Personal Info",
